Calculator functionality working as expected. No +/- operator yet.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Calculator</title>
+        <link rel="stylesheet" type="text/css" href='https://fonts.googleapis.com/css?family=Ubuntu Mono' />
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
