Added +/- functionality and rounding for large decimals. Seems to be working correctly.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div id="minus" class="operator button">-</div>
             <div id="times" class="operator button">x</div>
             <div id="divide" class="operator button">/</div>
+            <div id="sign" class="number button">+/-</div>
         </div>
     </body>
     <script src="scripts.js"></script>
