Added backspace functionality.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
             <div id="9" class="number button">9</div>
             <div id="clear" class="button">c</div>
             <div id="0" class="number button">0</div>
+            <div id="back" class="number button"><-</div>
+            <div id="sign" class="number button">+/-</div>
             <div id="equals" class="button">=</div>
             <div id="plus" class="operator button">+</div>
             <div id="minus" class="operator button">-</div>
             <div id="times" class="operator button">x</div>
             <div id="divide" class="operator button">/</div>
-            <div id="sign" class="number button">+/-</div>
         </div>
     </body>
     <script src="scripts.js"></script>
