--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     </head>
     <body>
         <div id="calculator">
-            <div id="return" class="item">0</div>
+            <div id="return" class="item"></div>
             <div id="1" class="number button item">1</div>
             <div id="2" class="number button item">2</div>
             <div id="3" class="number button item">3</div>
+            <div id="plus" class="operator button item">+</div>
             <div id="4" class="number button item">4</div>
             <div id="5" class="number button item ">5</div>
             <div id="6" class="number button item">6</div>
+            <div id="minus" class="operator button item">-</div>
             <div id="7" class="number button item">7</div>
             <div id="8" class="number button item">8</div>
             <div id="9" class="number button item">9</div>
-            <div id="sign" class="number button item other">+/-</div>
-            <div id="0" class="number button item">0</div>
-            <div id="back" class="number button item other"><-</div>
-            <div id="clear" class="button item other">c</div>
-            <div id="equals" class="button item other" >=</div>
-            <div id="plus" class="operator button item">+</div>
-            <div id="minus" class="operator button item">-</div>
             <div id="times" class="operator button item">x</div>
+            <div id="." class="number button item other">.</div>
+            <div id="0" class="number button item">0</div>
+            <div id="sign" class="number button item other">+/-</div>
             <div id="divide" class="operator button item">/</div>
+            <div id="clear" class="button item other">c</div>
+            <div id="back" class="number button item other"><-</div>
+            <div id="equals" class="button item other" >=</div>
         </div>
     </body>
     <script src="scripts.js"></script>
