Revert changes that broke equals functionality.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="divide" class="operator button item">/</div>
             <div id="clear" class="button item other">c</div>
             <div id="back" class="number button item other"><-</div>
-            <div class="button item equals" >=</div>
+            <div class="button item" id="equals">=</div>
         </div>
     </body>
     <script src="scripts.js"></script>
