--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="4" class="number button item">4</div>
             <div id="5" class="number button item ">5</div>
             <div id="6" class="number button item">6</div>
-            <div id="minus" class="operator button item">-</div>
+            <div id="minus" class="operator button item adjust-font-size">-</div>
             <div id="7" class="number button item">7</div>
             <div id="8" class="number button item">8</div>
             <div id="9" class="number button item">9</div>
@@ -26,7 +26,7 @@
             <div id="divide" class="operator button item">/</div>
             <div id="clear" class="button item other">c</div>
             <div id="back" class="number button item other"><-</div>
-            <div class="button item" id="equals">=</div>
+            <div id="equals" class="button item adjust-font-size">=</div>
         </div>
     </body>
     <script src="scripts.js"></script>
